# SO-ARM101_LLM-Integration

./: .gitignore  LICENSE  README.md  pyproject.toml
BusControlScripts/STServo_Python/: ping.py  read.py  read_write.py  sync_read.py  wheel.py  write.py
LeRobot_Examples/: teleoperate.py
Scripts/: 2.json  LLM Control.py  VLM_Control.py  interface_control.py  main.py  pyproject.toml  simulation.py
Scripts/Script Examples/BusControlScripts/: LowLevelControl.py
Scripts/Script Examples/BusControlScripts/stservo-env/STServo_Python/: callibrate.py  read.py  wheel.py  write.py
Scripts/Script Examples/BusControlScripts/stservo-env/STservo_sdk/: port_handler.py
Scripts/Script Examples/LeRobot_Examples/: teleoperate copy.py
Scripts/Submodules/: WebInterface.py
Scripts/config_files/: config_structure.yaml
Scripts/config_files/arm_calibration/: robot.json
Scripts/submodules/: motion_utils.py
Scripts/submodules/WebInterface/: interface.py  routes.py
Scripts/submodules/WebInterface/templates/: index.html
Scripts/submodules/config_module/: config_handler.py
Scripts/submodules/simulation/: README.md  simulation.py  so100_follower_sim.py  so_arm100_pybullet.py  web_interface_sim.py
