[project]
name = "so-arm101-llm-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feetech-servo-sdk>=1.0.0",
    "ffmpeg>=1.4",
    "huggingface-hub>=0.35.0",
    "lerobot>=0.3.3",
    "numpy>=2.3.3",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "uv>=0.8.18",
]
